--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
   <body>
     <div class="todo-app"></div>
 
+    <script
+      nomodule
+      src="https://polyfill.io/v3/polyfill.min.js?features=Set%2CMap%2CObject.assign%2Cfetch%2CrequestAnimationFrame%2CNodeList.prototype.forEach"
+    ></script>
     <script src="scripts/AppCollapsible.js"></script>
     <script src="scripts/AppDraggable.js"></script>
     <script src="scripts/AppFlip.js"></script>
