add fps counter

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,12 @@
 
     <script
       nomodule
-      src="https://polyfill.io/v3/polyfill.min.js?features=Set%2CMap%2CObject.assign%2Cfetch%2CrequestAnimationFrame%2CNodeList.prototype.forEach"
+      src="https://polyfill.io/v3/polyfill.min.js?features=Set%2CMap%2CObject.assign%2Cfetch%2CrequestAnimationFrame%2CNodeList.prototype.forEach%2Cperformance.now"
     ></script>
     <script src="scripts/AppCollapsible.js"></script>
     <script src="scripts/AppDraggable.js"></script>
     <script src="scripts/AppFlip.js"></script>
+    <script src="scripts/AppFps.js"></script>
     <script src="scripts/AppIcon.js"></script>
     <script src="scripts/AppLateBlur.js"></script>
     <script src="scripts/AppSortable.js"></script>
