add module preload

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,23 @@
     <link rel="stylesheet" href="styles/todo-frame.css" />
     <link rel="stylesheet" href="styles/todo-item-input.css" />
     <link rel="stylesheet" href="styles/todo-item.css" />
+
+    <link rel="modulepreload" href="scripts/AppCollapsible.js" />
+    <link rel="modulepreload" href="scripts/AppDraggable.js" />
+    <link rel="modulepreload" href="scripts/AppFlip.js" />
+    <link rel="modulepreload" href="scripts/AppFps.js" />
+    <link rel="modulepreload" href="scripts/AppIcon.js" />
+    <link rel="modulepreload" href="scripts/AppSortable.js" />
+    <link rel="modulepreload" href="scripts/TodoApp.js" />
+    <link rel="modulepreload" href="scripts/TodoCustomList.js" />
+    <link rel="modulepreload" href="scripts/TodoDay.js" />
+    <link rel="modulepreload" href="scripts/TodoFrameCustom.js" />
+    <link rel="modulepreload" href="scripts/TodoFrameDays.js" />
+    <link rel="modulepreload" href="scripts/TodoItem.js" />
+    <link rel="modulepreload" href="scripts/TodoItemInput.js" />
+    <link rel="modulepreload" href="scripts/TodoList.js" />
+    <link rel="modulepreload" href="scripts/TodoStore.js" />
+    <link rel="modulepreload" href="scripts/util.js" />
   </head>
   <body>
     <div class="todo-app"></div>
