add date picker, refactor event names, cleanups

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/app-button.css" />
     <link rel="stylesheet" href="styles/app-collapsible.css" />
+    <link rel="stylesheet" href="styles/app-date-picker.css" />
     <link rel="stylesheet" href="styles/app-footer.css" />
     <link rel="stylesheet" href="styles/app-header.css" />
     <link rel="stylesheet" href="styles/app-icon.css" />
+    <link rel="stylesheet" href="styles/todo-app.css" />
     <link rel="stylesheet" href="styles/todo-custom-list.css" />
     <link rel="stylesheet" href="styles/todo-day.css" />
     <link rel="stylesheet" href="styles/todo-frame.css" />
