switch icon cdn, add preconnect, move module preload up

--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,7 @@
 
     <title>VANILLA TODO</title>
 
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/app-button.css" />
-    <link rel="stylesheet" href="styles/app-collapsible.css" />
-    <link rel="stylesheet" href="styles/app-date-picker.css" />
-    <link rel="stylesheet" href="styles/app-footer.css" />
-    <link rel="stylesheet" href="styles/app-header.css" />
-    <link rel="stylesheet" href="styles/app-icon.css" />
-    <link rel="stylesheet" href="styles/todo-app.css" />
-    <link rel="stylesheet" href="styles/todo-custom-list.css" />
-    <link rel="stylesheet" href="styles/todo-day.css" />
-    <link rel="stylesheet" href="styles/todo-frame.css" />
-    <link rel="stylesheet" href="styles/todo-item-input.css" />
-    <link rel="stylesheet" href="styles/todo-item.css" />
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" />
 
     <link rel="modulepreload" href="scripts/AppCollapsible.js" />
     <link rel="modulepreload" href="scripts/AppDraggable.js" />
@@ -39,6 +27,20 @@
     <link rel="modulepreload" href="scripts/TodoList.js" />
     <link rel="modulepreload" href="scripts/TodoStore.js" />
     <link rel="modulepreload" href="scripts/util.js" />
+
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/app-button.css" />
+    <link rel="stylesheet" href="styles/app-collapsible.css" />
+    <link rel="stylesheet" href="styles/app-date-picker.css" />
+    <link rel="stylesheet" href="styles/app-footer.css" />
+    <link rel="stylesheet" href="styles/app-header.css" />
+    <link rel="stylesheet" href="styles/app-icon.css" />
+    <link rel="stylesheet" href="styles/todo-app.css" />
+    <link rel="stylesheet" href="styles/todo-custom-list.css" />
+    <link rel="stylesheet" href="styles/todo-day.css" />
+    <link rel="stylesheet" href="styles/todo-frame.css" />
+    <link rel="stylesheet" href="styles/todo-item-input.css" />
+    <link rel="stylesheet" href="styles/todo-item.css" />
   </head>
   <body>
     <div class="todo-app"></div>
