rename store to controller, update data flow section

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="modulepreload" href="scripts/AppIcon.js" />
     <link rel="modulepreload" href="scripts/AppSortable.js" />
     <link rel="modulepreload" href="scripts/TodoApp.js" />
+    <link rel="modulepreload" href="scripts/TodoController.js" />
     <link rel="modulepreload" href="scripts/TodoCustomList.js" />
     <link rel="modulepreload" href="scripts/TodoDay.js" />
     <link rel="modulepreload" href="scripts/TodoFrameCustom.js" />
@@ -25,8 +26,9 @@
     <link rel="modulepreload" href="scripts/TodoItem.js" />
     <link rel="modulepreload" href="scripts/TodoItemInput.js" />
     <link rel="modulepreload" href="scripts/TodoList.js" />
-    <link rel="modulepreload" href="scripts/TodoStore.js" />
+    <link rel="modulepreload" href="scripts/TodoLogic.js" />
     <link rel="modulepreload" href="scripts/util.js" />
+    <link rel="modulepreload" href="scripts/uuid.js" />
 
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/app-button.css" />
