redesign with css vars

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <link rel="modulepreload" href="scripts/util.js" />
     <link rel="modulepreload" href="scripts/uuid.js" />
 
+    <link rel="stylesheet" href="styles/vars.css" />
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/app-button.css" />
     <link rel="stylesheet" href="styles/app-collapsible.css" />
