add date picker to preload

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
 
     <link rel="modulepreload" href="scripts/AppCollapsible.js" />
+    <link rel="modulepreload" href="scripts/AppDatePicker.js" />
     <link rel="modulepreload" href="scripts/AppDraggable.js" />
     <link rel="modulepreload" href="scripts/AppFlip.js" />
     <link rel="modulepreload" href="scripts/AppFps.js" />
