add meta description

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     />
 
     <title>VANILLA TODO</title>
+    <meta
+      name="description"
+      content="A case study on viable techniques for vanilla web development; a to-do app in plain HTML, CSS and JavaScript."
+    />
 
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
 
