add pwa manifest, add icons

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#fefefe" />
 
     <title>VANILLA TODO</title>
     <meta
@@ -12,6 +13,8 @@
     />
 
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+
+    <link rel="icon" type="image/x-icon" href="images/icon.svg" />
 
     <link rel="modulepreload" href="scripts/AppCollapsible.js" />
     <link rel="modulepreload" href="scripts/AppDatePicker.js" />
@@ -47,6 +50,8 @@
     <link rel="stylesheet" href="styles/todo-frame.css" />
     <link rel="stylesheet" href="styles/todo-item-input.css" />
     <link rel="stylesheet" href="styles/todo-item.css" />
+
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <div class="todo-app"></div>
