--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="styles/todo-item.css" />
 
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="images/icon180x180.png" />
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
   </head>
   <body>
     <div class="todo-app"></div>
